# brlcad

example_geometry/: sphere.g  tinker.g  torus.g
grid_encoding_research/: main.py
src/remrt/: CMakeLists.txt  rtsrv.c
src/rt/: CMakeLists.txt  ModelTrainer.cpp  ModelTrainer.h  NeuralRayTracer.c  NeuralRayTracer.h  README  do.c  ext.h  main.c  neural_trainer.py  opt.c  train_neural.cpp  worker.c
